// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallMethodRequest schema test invalid values: 0 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'InputArguments'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  must have required property 'MethodId'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m"
`;

exports[`CallMethodRequest schema test invalid values: 1 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'InputArguments'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  must have required property 'MethodId'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'methodId'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     CallMethodRequest.schema.json#/additionalProperties[39m
[31m[39m"
`;

exports[`CallMethodRequest schema test invalid values: 2 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'InputArguments'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  must have required property 'MethodId'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'inputArguments'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     CallMethodRequest.schema.json#/additionalProperties[39m
[31m[39m"
`;

exports[`CallMethodRequest schema test invalid values: 3 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'InputArguments'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  must have required property 'MethodId'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'methodId'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     CallMethodRequest.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'inputArguments'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     CallMethodRequest.schema.json#/additionalProperties[39m
[31m[39m"
`;

exports[`CallMethodRequest schema test invalid values: 4 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'InputArguments'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  must have required property 'MethodId'[39m
[31m    Path:     CallMethodRequest.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'methodId'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     CallMethodRequest.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'namespaceIndex'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     CallMethodRequest.schema.json#/additionalProperties[39m
[31m[39m"
`;
